--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 </head>
 <body>
-
 <div id="mapid"></div>
 
 <!-- Make sure you put this AFTER Leaflet's CSS -->
@@ -19,5 +18,6 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 <script src="script.js"></script>
+<script src="raster-marching-squares.min.js"></script>
 </body>
 </html>
